Make sure we don't change the carret position when inserting a variable. When the editor is not focused, add the variable template at the end of the text, rather than at the begining. Remove the span wrap for the inserted variables in the editor.

--- a/src/background/css/editor.styl
+++ b/src/background/css/editor.styl
@@ -28,32 +28,3 @@
     padding: emCalc(3) emCalc(12);
 }
 
-
-/* variable highlight
- */
-
-.editor-qt-variable {
-    position: relative;
-    padding: 2px;
-    background: #efefef;
-    border-radius: 2px;
-}
-
-.editor-qt-variable:after {
-    content: 'This will be replaced with the right value when used.';
-    position: absolute;
-    top: 100%;
-    z-index: 999;
-    display: none;
-    width: 200px;
-    padding: 2px;
-    background: rgba(#000, .8);
-    border-radius: 2px;
-    
-    color: #fff;
-}
-
-.editor-qt-variable:hover:after {
-    display: block;
-}
-
